--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,7 @@ dependencies {
     compile "org.jetbrains.kotlin:kotlin-reflect:${project.kotlinVersion}"
     compile 'org.springframework:spring-web'
     compile 'org.springframework:spring-webmvc'
+    compile 'org.springframework.boot:spring-boot-autoconfigure'
     compile 'javax.servlet:javax.servlet-api:3.1.0'
 
 
@@ -64,6 +65,7 @@ dependencyManagement {
         dependency "org.springframework:spring-web:${project.springVersion}"
         dependency "org.springframework:spring-webmvc:${project.springVersion}"
         dependency "org.springframework:spring-test:${project.springVersion}"
+        dependency "org.springframework.boot:spring-boot-autoconfigure:${project.springBootVersion}"
     }
 }
 
